SDI-277 rename cancel button

--- a/server/views/pages/visits/visitsMigrationDetails.njk
+++ b/server/views/pages/visits/visitsMigrationDetails.njk
@@ -169,7 +169,7 @@
               }) }}
               {% if  migration.history.status != 'COMPLETED'  %}
               {{ govukButton({
-                  text: "Cancel",
+                  text: "Cancel migration",
                   classes: "govuk-button--warning",
                   attributes: { 'data-qa': 'cancel-migration-button' }
               }) }}
