--- a/server/views/pages/visits/startVisitsMigrationPreview.njk
+++ b/server/views/pages/visits/startVisitsMigrationPreview.njk
@@ -49,7 +49,7 @@
                         {% set html %}
                         <form action="/visits-migration/start/delete-faiures" method="post" novalidate>
                         <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
-                        <p>If you are sure all previous failures have been successful understood and processed you can permentaly delete any record of these errors</p>
+                        <p>If you are sure all previous failures have been successfully understood and processed, you can permanently delete any record of these errors</p>
                         <div class="govuk-button-group">
                             {{ govukButton({
                                 text: "Delete failure messages",
