SDI-355 Incentive migration details and cancel

--- a/server/views/pages/incentives/startIncentivesMigration.njk
+++ b/server/views/pages/incentives/startIncentivesMigration.njk
@@ -47,7 +47,7 @@
                             name: "fromDate",
                             classes: "govuk-input--width-20",
                             hint: {
-                                text: "Example 2020-03-23. This optional field indicates the used the IEP date not the created date"
+                                text: "Example 2020-03-23. This optional field indicates the IEP date not the created date"
                             },
                             value: form.fromDate,
                             errorMessage: errors | findError('fromDate')
@@ -61,7 +61,7 @@
                             name: "toDate",
                             classes: "govuk-input--width-20",
                             hint: {
-                                text: "Example 2020-03-23. This optional field indicates the used the IEP date not the created date"
+                                text: "Example 2020-03-23. This optional field indicates the IEP date not the created date"
                             },
                             value: form.toDate,
                             errorMessage: errors | findError('toDate')
