--- a/server/views/pages/visits/viewRoomMappings.njk
+++ b/server/views/pages/visits/viewRoomMappings.njk
@@ -5,16 +5,11 @@
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% set pageTitle = applicationName + " - Room mappings" %}
 
 {% block content %}
-{{ govukBackLink({
-text: "Back",
-href: '/'
-}) }}
-
-
 <div class="govuk-grid-row govuk-body">
     <h1 class="govuk-heading-l">Room mappings - {{ prisonId }}</h1>
 
@@ -37,42 +32,48 @@ href: '/'
                 <input type="hidden" name="prisonId" value="{{ u.prisonId }}"/>
                 <input type="hidden" name="nomisRoomDescription" value="{{ u.nomisRoomDescription }}"/>
                 {{ govukButton({
-                text: "Delete",
-                classes: "float-right, govuk-!-margin-bottom-0"
+                text: "delete",
+                classes: "float-right, govuk-!-margin-bottom-0",
+                attributes: { 'data-qa': 'delete-button-' + u.agencyInternalLocationDescription }
                 }) }}
             </form>
             {% else %}
             <form action="/visits-room-mappings/add/preview" method="post" novalidate>
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
                 <input type="hidden" name="prisonId" value="{{ u.prisonId }}"/>
-                <input type="hidden" name="nomisRoomDescription" value="{{ u.nomisRoomDescription }}"/>
+                <input type="hidden" name="nomisRoomDescription" value="{{ u.agencyInternalLocationDescription }}"/>
                 {{ govukButton({
-                text: "Add",
-                classes: "float-right, govuk-!-margin-bottom-0"
+                text: "add",
+                classes: "float-right, govuk-!-margin-bottom-0",
+                attributes: { 'data-qa': 'add-button-' + u.agencyInternalLocationDescription }
                 }) }}
             </form>
             {% endif %}
             {% endset %}
 
             {% set rows = (rows.push([
-            { text: u.agencyInternalLocationDescription },{ text: u.vsipId },{ text: u.isOpen },{ html: actionHtml }
+            { text: u.agencyInternalLocationDescription },{ text: u.vsipId },{ text: u.isOpen },{ text: u.count },{ html: actionHtml }
             ]), rows) %}
             {% endfor %}
 
             {{ govukTable({
             head: [
             {
-            text: "NOMIS room description"
+            text: "NOMIS description"
             },
             {
-            text: "VSIP room description"
+            text: "VSIP description"
             },
             {
-            text: "Open or closed"
+            text: "Open"
+            },
+            {
+            text: "Usage (future visits)"
             },
             {}
             ],
-            rows: rows
+            rows: rows,
+            classes: "govuk-!-margin-left-50"
             }) }}
 
             {% else %}
