--- a/server/views/pages/visits/viewRoomMappings.njk
+++ b/server/views/pages/visits/viewRoomMappings.njk
@@ -56,6 +56,8 @@
             ]), rows) %}
             {% endfor %}
 
+            {% set usageTitle %}Usage {% if futureVisits %}(future visits){% endif %}{% endset %}
+
             {{ govukTable({
             head: [
             {
@@ -68,7 +70,7 @@
             text: "Open"
             },
             {
-            text: "Usage (future visits)"
+            text: usageTitle
             },
             {}
             ],
