--- a/server/views/pages/visits/viewRoomMappings.njk
+++ b/server/views/pages/visits/viewRoomMappings.njk
@@ -30,6 +30,7 @@
             <form action="/visits-room-mappings/delete" method="post" novalidate>
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
                 <input type="hidden" name="prisonId" value="{{ u.prisonId }}"/>
+                <input type="hidden" name="futureVisits" value="{{ futureVisits }}"/>
                 <input type="hidden" name="nomisRoomDescription" value="{{ u.nomisRoomDescription }}"/>
                 {{ govukButton({
                 text: "delete",
@@ -41,6 +42,7 @@
             <form action="/visits-room-mappings/add/preview" method="post" novalidate>
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
                 <input type="hidden" name="prisonId" value="{{ u.prisonId }}"/>
+                <input type="hidden" name="futureVisits" value="{{ futureVisits }}"/>
                 <input type="hidden" name="nomisRoomDescription" value="{{ u.agencyInternalLocationDescription }}"/>
                 {{ govukButton({
                 text: "add",
