sdi-443 remove temp role and add uppercase to prison id

--- a/server/views/pages/visits/roomMappingPrison.njk
+++ b/server/views/pages/visits/roomMappingPrison.njk
@@ -31,7 +31,7 @@
                     },
                     id: "prisonId",
                     name: "prisonId",
-                    classes: "govuk-input--width-10",
+                    classes: "govuk-input--width-10 transform-uppercase",
                     errorMessage: errors | findError('prisonId'),
                     hint: {
                     text: "Example prison code: `HEI`"
