--- a/server/views/pages/appointments/appointmentsMigrationDetails.njk
+++ b/server/views/pages/appointments/appointmentsMigrationDetails.njk
@@ -4,24 +4,24 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 
-{% set pageTitle = applicationName + " - Sentencing migration details" %}
+{% set pageTitle = applicationName + " - Appointments migration details" %}
 
 {% block content %}
 
   {{ govukBackLink({
     text: "Back",
-    href: '/sentencing-migration'
+    href: '/appointments-migration'
   }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">Sentencing migration details</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">Appointments migration details</h1>
     </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
       {% set detailsHtml %}
       <p> 
-        When a migration is in progress a background service counts all sentencing entities that can possibly be migrated and adds each entity to a queue. That initial count is the <b>Estimated</b> number.
+        When a migration is in progress a background service counts all appointments entities that can possibly be migrated and adds each entity to a queue. That initial count is the <b>Estimated</b> number.
         That number does not take into account if any record had previously been migrated. Also, if an entity was created just after the initial calculation it may still be processed.
         At the beginning of the process the <b>Still to be processed</b> count will go up until it eventually gets close to the <b>Estimated</b> number. The <b>Still to be processed</b> number represents the number of records that still requiring processing. By the end of the process that number will go to zero.
         </p> 
@@ -49,6 +49,11 @@
 
     <div class="govuk-grid-row">
       {% set filterHtml %}
+        {% if migration.history.filterPrisonIds %}
+          <div>
+            <span class="govuk-label--s">Prisons:</span><span data-qa="filterPrisonIds" class="govuk-!-margin-left-2">{{ migration.history.filterPrisonIds }}</span>
+          </div>
+        {% endif %}
         {% if migration.history.filterFromDate %}
           <div>
             <span class="govuk-label--s">From date:</span><span data-qa="filterFromDate" class="govuk-!-margin-left-2">{{ migration.history.filterFromDate | formatDate('D MMMM YYYY - HH:mm') }}</span>
@@ -147,14 +152,14 @@
     </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
-        <form action="/sentencing-migration/cancel" method="post" novalidate>
+        <form action="/appointments-migration/cancel" method="post" novalidate>
             <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
             <input type="hidden" name="migrationId" value="{{ migration.history.migrationId }}"/>
 
             <div class="govuk-button-group">
               {{ govukButton({
                 text: "Refresh",
-                href: '/sentencing-migration/details?migrationId=' + migration.history.migrationId,
+                href: '/appointments-migration/details?migrationId=' + migration.history.migrationId,
                 classes: "govuk-button--secondary"
               }) }}
               {% if  migration.history.status != 'COMPLETED'  %}
