--- a/server/views/pages/appointments/appointmentsMigrationFailures.njk
+++ b/server/views/pages/appointments/appointmentsMigrationFailures.njk
@@ -4,18 +4,18 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 
-{% set pageTitle = applicationName + " - Visits migration failures" %}
+{% set pageTitle = applicationName + " - Appointments migration failures" %}
 
 {% block content %}
 
   {{ govukBackLink({
     text: "Back",
-    href: '/visits-migration'
+    href: '/appointments-migration'
   }) }}
 
   <main class="app-container govuk-body">
     <div class="govuk-width-container">
-      <h1 class="govuk-heading-l govuk-!-margin-top-7">Visits migration failures</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-top-7">Appointments migration failures</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
           {% set notificationBannerHtml %}
@@ -91,7 +91,7 @@
           <p data-qa=no-failures class="govuk-body">There no failures still waiting to be resolved</p>
         {% endif %}
 
-        </div
+        </div>
       </div>
     </div>
   </main>
