SDIT-827 appointments-migration page filter issues

--- a/server/views/pages/appointments/appointmentsMigration.njk
+++ b/server/views/pages/appointments/appointmentsMigration.njk
@@ -38,7 +38,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         <div class="moj-filter-layout">
-          <div class="moj-filter-layout__filter">{{ mojFilter(filterOptionsHtml | toAppointmentsMigrationsListFilter(migrationViewFilter, filterOptionsHtml)) }}</div>
+          <div class="moj-filter-layout__filter">{{ mojFilter(filterOptionsHtml | toAppointmentsMigrationsListFilter(migrationViewFilter)) }}</div>
           <div class="moj-filter-layout__content" data-qa="migration-results-div">
             <div>
               <div class="govuk-grid-column-full">
