sdi-929 wire up cancel and make prison id optional

--- a/server/views/pages/adjudications/startAdjudicationsMigration.njk
+++ b/server/views/pages/adjudications/startAdjudicationsMigration.njk
@@ -47,7 +47,7 @@
                             name: "prisonIds",
                             classes: "govuk-input--width-10",
                             hint: {
-                                text: "Example 3 letter prison id: `HEI` or comma separated list: `HEI, WWI`"
+                                text: "Optional. Example 3 letter prison id: `HEI` or comma separated list: `HEI, WWI`"
                             },
                             value: form.prisonIds,
                             errorMessage: errors | findError('prisonIds')
