SDIT-983 Add integration tests for activities migration

--- a/server/views/pages/activities/startActivitiesMigrationPreview.njk
+++ b/server/views/pages/activities/startActivitiesMigrationPreview.njk
@@ -73,7 +73,7 @@
 
                     {% set summaryRows = [] %}
 
-                    {{ summaryRow(form.prisonId, "Prison code", summaryRows, "prison-code") }}
+                    {{ summaryRow(form.prisonId, "Prison code", summaryRows, "prison-id") }}
                     {{ summaryRow(form.courseActivityId, "Single course activity to migrate", summaryRows, "course-activity-id") }}
 
                     {{ govukSummaryList({
