--- a/server/views/pages/allocations/allocationsMigration.njk
+++ b/server/views/pages/allocations/allocationsMigration.njk
@@ -101,7 +101,7 @@
                           </div>
                           {% if u.filterPrisonId %}
                             <div class="govuk-grid-column-full">
-                              <span class="govuk-label--s">Prisons:</span><span data-qa="filterPrisonId" class="govuk-!-margin-left-2">{{ u.filterPrisonId }}</span>
+                              <span class="govuk-label--s">Prison:</span><span data-qa="filterPrisonId" class="govuk-!-margin-left-2">{{ u.filterPrisonId }}</span>
                             </div>
                           {% endif %}
                           {% if u.filterCourseActivityId %}
