--- a/server/views/pages/allocations/allocationsMigrationDetails.njk
+++ b/server/views/pages/allocations/allocationsMigrationDetails.njk
@@ -51,7 +51,7 @@
       {% set filterHtml %}
         {% if migration.history.filterPrisonId %}
           <div>
-            <span class="govuk-label--s">Prisons:</span><span data-qa="filterPrisonId" class="govuk-!-margin-left-2">{{ migration.history.filterPrisonId }}</span>
+            <span class="govuk-label--s">Prison:</span><span data-qa="filterPrisonId" class="govuk-!-margin-left-2">{{ migration.history.filterPrisonId }}</span>
           </div>
         {% endif %}
         {% if migration.history.filterCourseActivityId %}
