SDIT-1101 Add end activities link

--- a/assets/sass/local.sass
+++ b/assets/sass/local.sass
@@ -3,3 +3,9 @@
 
 .transform-uppercase
   text-transform: uppercase
+
+.result-success
+  color: govuk-colour('green')
+
+.result-error
+  color: govuk-colour('red')
