--- a/server/views/pages/activities/activitiesMigration.njk
+++ b/server/views/pages/activities/activitiesMigration.njk
@@ -110,6 +110,21 @@
                             </div>
                           {% endif %}
                         </div>
+                        <div class="govuk-grid-row govuk-!-margin-bottom-2">
+                          <div class="govuk-grid-column-full">
+                            <a data-qa="end-activities-link" class="govuk-link" href="/activities-migration/end-activities?migrationId={{ u.migrationId }}">End NOMIS activities</a>
+                            {% if endMigratedActivitiesResult.migrationId == u.migrationId %}
+                              {% if endMigratedActivitiesResult.result == 'OK' %}
+                                {% set resultClass = 'result-success' %}
+                              {% else %}
+                                {% set resultClass = 'result-error' %}
+                              {% endif %}
+                              <span class="{{ resultClass }}" data-qa="end-activities-result">
+                                {{ endMigratedActivitiesResult.result }}
+                              </span>
+                            {% endif %}
+                          </div>
+                        </div>
                       </div>
                     {% endset %}
 
