--- a/server/views/pages/allocations/allocationsMigration.njk
+++ b/server/views/pages/allocations/allocationsMigration.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% set pageTitle = applicationName + " - Allocations migration" %}
 
@@ -18,6 +19,14 @@
     <h1 class="govuk-heading-l">Allocations migration</h1>
 
     <div>
+          {% set migrationInstructionsHtml %}
+            <p>Migrating prisoners allocated to an activity is a child process of the activity migration and should be performed afterwards.</p>
+            <p>See <a class="govuk-link" href="/activities-migration#activties-migration-details">How do I run an Activities migration?</a> for further details.</p>
+          {% endset %}
+          {{ govukDetails({
+            summaryText: "How do I run an Allocations migration?",
+            html: migrationInstructionsHtml
+          }) }}
       {{ govukButton({
         text: "Start new migration",
         href: "/allocations-migration/start",
