SDIT-1101 Fix test

--- a/server/views/pages/activities/activitiesMigration.njk
+++ b/server/views/pages/activities/activitiesMigration.njk
@@ -34,7 +34,8 @@
         text: "Start new migration",
         href: "/activities-migration/start",
         isStartButton: true,
-        classes: "float-right"
+        classes: "float-right",
+        attributes: { "data-qa": "start-new-migration" }
       }) }}
     </div>
 
