--- a/server/views/pages/activities/activitiesMigration.njk
+++ b/server/views/pages/activities/activitiesMigration.njk
@@ -24,6 +24,7 @@
         <p>All activities migrated to DPS will be synchronised back to NOMIS as <strong>new</strong> activities under the new program service codes. We are using a 1 way sync from DPS -> NOMIS so the old NOMIS activities are now redundant.</p>
         <p>When the activity migration is complete and has been checked, click on the "Migrate Allocations" link and migrate the allocated prisoners to DPS. This will migrate all allocated prisoners onto the new activities and also synchronise them back to NOMIS. Note that ended or waiting allocations will not be migrated.</p>
         <p>When the allocation migration is complete and has been checked we need to end all of the old NOMIS activities as they have been replaced by the migrated activities in DPS. Press the "End NOMIS activities" button to end all of the old activities and also end any allocations for those activities.</p>
+        <p><strong>IMPORTANT</strong> If you need to run multiple activity migrations because there are failures that need fixing, you must press the "End NOMIS activities" button for <strong>all</strong> migrations that were successful. The button only ends old NOMIS activities for those activities that were successfully migrated on that migration run.</p>
       {% endset %}
       {{ govukDetails({
         summaryText: "How do I run an Activities migration?",
