--- a/server/views/pages/activities/startActivitiesMigrationPreview.njk
+++ b/server/views/pages/activities/startActivitiesMigrationPreview.njk
@@ -42,19 +42,19 @@
                             </p>
                             {% if not form.prisonSwitchedOnNomis %}
                                 <p class="govuk-notification-banner__heading" id="nomisFeatureSwitch">
-                                    NOMIS feature switch not turned on for {{ form.prisonId }}. Turn on now?
+                                    NOMIS feature switch not turned on for {{ form.prisonId }}.
                                     {% set activate_prison_link = "/activities-migration/activate-prison?prisonId=" + form.prisonId + "&serviceName=ACTIVITY" %}
-                                    {{ govukButton({
-                                      text: "Activate Prison",
-                                      href: activate_prison_link,
-                                      isStartButton: false,
-                                      attributes: { 'data-qa': 'activate-prison-button' }
-                                    }) }}
+                                    <a href="{{ activate_prison_link }}" data-qa='activate-prison-button'>Activate prison</a>
                                 </p>
                             {% endif %}
                             {% if not form.prisonSwitchedOnDps %}
                                 <p class="govuk-notification-banner__heading" id="dpsFeatureSwitch">
                                     DPS feature switch not turned on for {{ form.prisonId }}.
+                                </p>
+                            {% endif %}
+                                {% if not form.dpsPayBandsExist %}
+                                <p class="govuk-notification-banner__heading" id="dpsPayBands">
+                                    DPS has no pay bands for prison {{ form.prisonId }}.
                                 </p>
                             {% endif %}
                         {% endset %}
