--- a/server/views/pages/activities/startActivitiesMigrationPreview.njk
+++ b/server/views/pages/activities/startActivitiesMigrationPreview.njk
@@ -52,9 +52,14 @@
                                     DPS feature switch not turned on for {{ form.prisonId }}.
                                 </p>
                             {% endif %}
-                                {% if not form.dpsPayBandsExist %}
+                            {% if not form.dpsPayBandsExist %}
                                 <p class="govuk-notification-banner__heading" id="dpsPayBands">
                                     DPS has no pay bands for prison {{ form.prisonId }}.
+                                </p>
+                            {% endif %}
+                            {% if not form.dpsPrisonRegimeExists %}
+                                <p class="govuk-notification-banner__heading" id="dpsPrisonRegime">
+                                    DPS has no slot times configured for prison {{ form.prisonId }}.
                                 </p>
                             {% endif %}
                         {% endset %}
