pgp SDIT 1411 upgrades (#151)
* Use in-memory token store when developing locally (#273)

* Use in-memory token store when developing locally

Removes the need for a local Redis container

* Remove docker-compose dependency

* Default to disabled when running locally

* Rename to InMemoryTokenStore + explicitly create session MemoryStore

* Remove getUserRoles as an api call and add as decoded from the token (#274)

Co-authored-by: Andrew Lee <1517745+andrewrlee@users.noreply.github.com>

* Requre user input when excucting rename script to ensure slack alert channels are set correctly. (#277)

* fix rename project github workflow, correct inputs key. (#278)

* prompt for user input if script is run manually/locally (#279)

* PI-1717 Set session cookie name per-project (#280)

* PI-1717 Set session cookie name per-project

* Add `.session` suffix

* Ensure product ID is set when bootstraping new projects (#281)

* Update dependencies 2023-12-08 (#282)

* HAAR-2061: Remove deprecated filed (#285)

* HAAR-2061:
1 ) Removed staffId (userId has same info),
2) activeCaseLoadId : can be derived from 'me/caseloads' endpoint in 'nomis-user-roles-api'

* HAAR-2061: Remove staffId from stub

* Add execute permission back to rename-project.bash script (#286)

* Remove jQueryUI, initialise moj frontend (#288)

* Update Helm release generic-service to 2.9 (#284)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update CHANGELOG.md (#275)

* Update CHANGELOG.md

* Update CHANGELOG.md

---------

Co-authored-by: nishanthmahasamudram <129746957+nishanthmahasamudram@users.noreply.github.com>
Co-authored-by: Paul Solecki <51918433+psoleckimoj@users.noreply.github.com>

* Update all non major NPM dependencies (#271)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update dependencies 2023-12-18 (#290)

* Update the breadcrumb partial with display current

--- a/server/views/partials/breadcrumb.njk
+++ b/server/views/partials/breadcrumb.njk
@@ -1,6 +1,6 @@
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 
-{% macro breadcrumb(pageTitle, breadcrumbList) %}
+{% macro breadcrumb(pageTitle, breadcrumbList, displayCurrentPageTitle="true") %}
 
   {% set rows = [ {
     text: "Home",
@@ -17,11 +17,15 @@
     ), rows) %}
   {% endfor %}
 
-  {% set completedRows = (rows.push(
-    {
-      text: pageTitle
-    }
-  ), rows) %}
+  {% if displayCurrentPageTitle %}
+    {% set completedRows = (rows.push(
+      {
+        text: pageTitle
+      }
+    ), rows) %}
+  {% else %}
+    {% set completedRows = rows %}
+  {% endif %}
 
 {{ govukBreadcrumbs({
   collapseOnMobile: true,
